# hafnium

./: .gitignore  .gitmodules  0001-test.patch  build.sh  cscope.sh  env.sh  log.sh  pack.sh  qemu.sh  run.sh  run_test.sh  update.sh
example/: fvp-base-gicv2-psci.dts  fvp-base-gicv3-psci-1t.dts  fvp_guest.dts  guest.dts  guest1.dts  manifest.dtb  manifest.dts  manifest_fvp.dts  manifest_qemu.dts  manifest_xavier.dts  qemu_gicv2.dts  qemu_guest.dts  qemu_guest_gicv2.dts  tegra194-p2888-0001-p2822-0000.dts  xavier_guest.dts
images/dtb/: fvp-base-gicv3-psci-1t.dtb
images/hafnium_initrd/: manifest.dtb
inc/hf/: bitops.h  cpu.h  dlog.h  errno.h  fdt.h  interrupt.h  io.h  layout.h  list.h  manifest.h  mm.h  std.h  vcpu.h  vm.h
inc/hf/arch/: cpu.h  cpumask.h  std.h
inc/hf/device/: gic.h  vdev.h  vgic.h
src/: BUILD.gn  api.c  cpu.c  crc.c  crc.h  dlog.c  fdt_patch.c  init.c  layout.c  load.c  main.c  manifest.c  manifest_test.cc  mm.c  mpool.c  std.c  vcpu.c  vm.c
src/arch/aarch64/: mm.c  sysregs.c
src/arch/aarch64/hypervisor/: arch_init.c  cpu.c  exceptions.S  feature_id.c  feature_id.h  handler.c  psci_handler.c  vdev.c  vm.c
src/arch/aarch64/inc/hf/arch/: arch.h  barriers.h  vdev.h
src/arch/aarch64/ns16550/: BUILD.gn  ns16550.c  ns16550.h
src/arch/fake/: mm.c
src/arch/fake/hypervisor/: cpu.c  ffa.c
src/arch/fake/inc/hf/arch/: types.h
src/drivers/: BUILD.gn
src/drivers/gic/: gicv2.c  gicv2.h  gicv3.c  gicv3.h  interrupt.c  vgic.c  vgicv2.c  vgicv3.c
src/drivers/vdev/: vdev.c
