# Copyright 2021 The Hafnium Authors.
#
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/BSD-3-Clause.

source_set("gicv3") {
    sources = [
        "gic/gicv3.c",
        "gic/vgicv3.c",
    ]
    deps = [
        ":vdev",
    ]
}

source_set("vdev") {
    sources = [
        "vdev/vdev.c"
    ]
}
